docs: settle CORECOUNT-SWEEP-1, surface three unfiled decisions, correct two stale claims
CORECOUNT-SWEEP-1 is settled by measurement, and the suspicion in the row was
right: forkCount=0 hung the reactor, the core count never did. `-DargLine` really
does not reach the fork (with -X the forked command line carries no added flag),
but JDK_JAVA_OPTIONS does — the JVM prints "Picked up" twice, for Maven and for
the fork, and availableProcessors() reads 4 inside. Forked at four cores the full
enterprise reactor completes with no hang at 4475/0/0/24 over 26 reporting
modules, identical to the 12-core baseline, and ControlApiPreferencesTest — the
class the previous attempt froze inside — passes in 0.115s.

BACKLOG §1 was reported EMPTY by every handoff since 2026-09-11 while
dataset-column-derivation-plan.md reported itself blocked on decisions. Its three
open questions (Q2 temporal tie-break, Q3 stored-column handling, Q4 contract-pin
scope) are now filed where an operator will see them. A plan is where a decision
is described; the board is where it is queued.

Two stale claims corrected. INDEX.md said the plan had four open decisions and
described the "refresh REPLACES the document, destroying authored roles" defect in
the present tense — Q1 shipped that fix on 2026-09-11. And §7's open grounding is
closed: exactly one of eleven committed dataset documents carries authored roles,
it is kind: virtual, and nothing committed materializes at all, so the sample tree
cannot regression-test the merge fix.

Also grounded AGT-ARTIFACT-1 and STUDIO-HALVES-1 onto their rows so the next shift
does not re-ground them. Both are buildable and both are mis-scoped: the assistant
row needs a translation layer, not a field assignment, because ARTIFACT_KINDS
excludes the draft shapes the five skills emit; the Studio row's query half means
re-pointing an existing Run button at a shipped route that no client has ever
called.

Records the guard-scope trap that bit twice here: the guards resolv